Revert "Merge branch 'main' into NJ-131-style-artist-page"
This reverts commit 8cb820ad8dd28fd4549f06750ed88cc77fb69c61, reversing
changes made to 69409b2721f4fb2037e384fed69ed7d61bc401ba.

--- a/app/src/stylesheets/navigation.scss
+++ b/app/src/stylesheets/navigation.scss
@@ -1,6 +1,6 @@
 .site-navigation {
-    background-color: black;
-    color: $background-color;
+    background-color: $dark;
+    color: $white;
     height: 70px;
     padding: 32px 64px;
     display: flex;
