--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -1,4 +1,3 @@
-$primary-color: #f6f6f6;
 $background-color: #e6e6e6;
 $white: #F0F0F1;
 $yellow: #ffc561;
@@ -13,7 +12,7 @@ $error: rgb(194, 0, 0);
 *,
 *:after,
 *:before {
-  font-family: 'Heebo', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   box-sizing: border-box;
 }
 
@@ -28,16 +27,13 @@ $error: rgb(194, 0, 0);
     box-sizing: border-box;
   }
 body {
+  max-width: 1920px;
   margin: 0 auto;
-  max-width: 1536px;
-  background-color: $primary-color;
+  background-color: $dark-grey;
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5 {
-    font-family: 'Bevan', cursive;
+  h1, h2, h3, h4, h5 {
+    font-family: 'Fira Sans', sans-serif;
+    color: $orange;
   }
 }
 
@@ -56,7 +52,7 @@ body {
 .custom-button {
   width: 100%;
   // margin: 16px 0;
-  background-color: crimson;
+  background-color: $orange;
   color: white;
   outline: none;
   padding: 8px 16px;
