--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -19,6 +19,4 @@
 @import './stylesheets/orderConfirmation.scss';
 @import './stylesheets/ticket.scss';
 @import './stylesheets/audioPlayer.scss';
-//Examples for implementing in stylesheets:
-//font-family: 'Bevan', cursive;
-//font-family: 'Heebo', sans-serif;
+@import './stylesheets/livestreamPage.scss';
