NJ-XX Refactor orderconfirmation and display order data

--- a/app/src/stylesheets/orderConfirmation.scss
+++ b/app/src/stylesheets/orderConfirmation.scss
@@ -1,7 +1,9 @@
 .container#order{
-   margin: 0 auto;
-    max-width: 1000px;
+   margin: 64px auto;
+    max-width: 500px;
     background-color: $white;
+    padding: 24px;
+    
 }
 
 .order-content{
