NJ-XX Add Homebutton to mobile nav

--- a/app/src/stylesheets/homeButton.scss
+++ b/app/src/stylesheets/homeButton.scss
@@ -10,5 +10,9 @@
         font-weight: bolder;
         color: whitesmoke;
         text-decoration: none;
+        span{
+            color: $dark;
+            margin-right: 2px;
+        }
     }
 }
