NJ-131 add centred text

--- a/app/src/stylesheets/artistPage.scss
+++ b/app/src/stylesheets/artistPage.scss
@@ -20,6 +20,10 @@ section#header {
       box-shadow: 4px 4px 8px #191818;
     }
   }
+  h1{
+    text-align: center;
+  }
+
   h2 {
     font-size: 46px;
     margin: 16px;
