--- a/app/src/stylesheets/searchBar.scss
+++ b/app/src/stylesheets/searchBar.scss
@@ -28,6 +28,9 @@
     background-color: #f6f6f6;
     padding: 8px;
    
+    &:hover{
+        cursor: pointer;
+    }
 
     img {
         object-fit: contain;
