XX-back-to-top functioning button, shit show css

--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -22,6 +22,7 @@
 @import './stylesheets/audioPlayer.scss';
 @import './stylesheets/venueDetails.scss';
 @import './stylesheets/venuePage.scss';
+@import './stylesheets/scrollButton.scss'
 //Examples for implementing in stylesheets:
 //font-family: 'Bevan', cursive;
 //font-family: 'Heebo', sans-serif;
