NJ-XX Fix link in card button

--- a/app/src/stylesheets/card.scss
+++ b/app/src/stylesheets/card.scss
@@ -72,7 +72,9 @@
          }
       }
    }
-
+   a{
+      background-color: $orange;
+   }
   .btn {
       display: flex;
       align-items: center;
