--- a/app/src/stylesheets/scrollButton.scss
+++ b/app/src/stylesheets/scrollButton.scss
@@ -1,12 +1,18 @@
 .scrollButton {
-    display: flex;
-    color: black;
-    background-color: green($color: #000000);
-    position: relative;
-    z-index: 100000000;
-    width: 30vw;
-    height: 1vh;
-    border: 1px solid black;
-    justify-content: center;
-    margin-bottom: 1000px;
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    bottom: 32px;
+    right: 32px;
+    background-color: $white;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
+    img {
+        object-fit: contain;
+        padding: 8px;
+          width: inherit;
+    height: inherit;
+    }
 }
