--- a/app/src/stylesheets/livestreamPage.scss
+++ b/app/src/stylesheets/livestreamPage.scss
@@ -13,7 +13,13 @@
     }
     .video{
         margin: 16px 0;
+
+        .video-player{
+            width: 70%;
+            margin: 0 auto;
+        }
     }
+
 }
     .temp-video{
         background-color: blue;
